@@ -14,7 +14,10 @@ Rhys Ulerich <rhys.ulerich@gmail.com>
 	* Dijkstra's Shortest path algorithm.
 
 Christian Muise <christian.muise@gmail.com>
-	* Various Hypergraph algorithms
+	* Various Hypergraph algorithms.
+
+Zsolt Haraszti <zsolt@drawwell.net>
+	* Weighted random generated graphs.
 
 
 LICENSE
